test/tests/compiler/12_unsigned_integers/invalid_parse/bad_specifiers.plx
pub fn main(none) i32 {
    # Can't combine signed and unsigned specifiers
    i: i32 = 0
    return cast<i32 u32>(i)
}
